--- a/css/style.css
+++ b/css/style.css
@@ -58,10 +58,87 @@ nav ul li a:hover {
 }
 
 .kolom {
-  margin-top: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .kolom img {
   width: 100%;
 }
 
+.kolom .deskripsi {
+  font-size: 30px;
+  font-weight: bold;
+  font-family: 'comic sans ms';
+  color: #557B83;
+}
+
+section {
+  margin: auto;
+  margin-bottom: 50px;
+  display: flex;
+}
+
+.tengah {
+  text-align: center;
+  width: 100%;
+}
+
+a.tbl-biru {
+  background: #084594;
+  font-family: 'open sans';
+  border-radius: 20px;
+  margin-top: 20px;
+  padding: 15px 20px 15px 20px;
+  color: #ffffff;
+  cursor: pointer;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+a.tbl-biru:hover {
+  background: #062C30;
+}
+
+p {
+  font-family: 'Open sans';
+  font-size: 20px;
+  margin: 10px 0px 10px 0px;
+  padding: 10px 0px 10px 0px;
+}
+
+.tutors-list {
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.kartu-tutor {
+  width: 20%;
+  margin: 0 auto;
+}
+
+.kartu-tutor img {
+  width: 80%;
+  border-radius: 50%;
+}
+
+.kartu-tutor p {
+  font-family: 'comic sans ms';
+  font-weight: 800;
+  font-size: 25px;
+  text-align: Center;
+  color: #557B83;
+}
+
+#messageus {
+  background: #dedede;
+  padding: 50px 0px 50px 0px;
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
+}
